<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.leeds.ccg.andyt</groupId>
    <artifactId>generic</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>agdt-generic</name>
    <url>https://github.com/agdturner/agdt-generic</url>
    <description>A Java Library with generally used classes.</description>
    <scm>
        <url>git@github.com:agdturner/agdt-generic.git</url>
        <connection>scm:git:git@github.com:agdturner/agdt-generic.git</connection>
        <developerConnection>scm:git:git@github.com:agdturner/agdt-generic</developerConnection>
    </scm>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://github.com/agdturner/agdt-generic/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>Centre for Computational Geography, University of Leeds</name>
        <url>http://www.ccg.leeds.ac.uk/</url>
    </organization>
    <developers>
        <developer>
            <id>agdturner</id>
            <name>Andy Turner</name>
            <email>a.g.d.turner@leeds.ac.uk</email>
            <organization>University of Leeds, University of Leeds</organization>
            <organizationUrl>http://www.ccg.leeds.ac.uk</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <generic.version>1.0-SNAPSHOT</generic.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
</project>